--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ DB_USER=postgres
 DB_PASSWORD=1234
 DB_NAME=essay
 SECRET_KEY=SECRET_KEYSECRET_KEYSECRET_KEY
+
+KAFKA_BROKERS=localhost:9092
+KAFKA_TOPIC=essay_check_queue
+KAFKA_CLIENT_ID=essay_producer
+KAFKA_ACKS=all
